# espn-nba-scraper-api

./: Cargo.toml  README.md
.github/workflows/: build-and-deploy.yml
src/: main.rs
test-data/: brooklyn-home-page-for-previous-games.html  game-page-for-odds-not-found.html  game-page-for-odds.html  injuries-none-exist-for-wizards.html  injuries.html  okc-home-page-upcoming-game-id.html  raptors-away-box.html  raptors-home-box.html  raptors-home-page.html  raptors-team-page-upcoming-opponent.html  team-page-game-over.html  team-page-live-game.html  teams-page.html
