[package]
name = "qr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
strum = "0.21"
strum_macros = "0.21"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
serde_json = "1.0.66"
json = "0.12.4"
serde = { version = "1.0.130", features = ["derive"] }
rocket_cors = "0.5.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
askama = "0.10"